--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -34,10 +34,14 @@ jobs:
          echo "/opt/local/bin" >> $GITHUB_PATH
       - name: Install prerequisites
         run: sudo /opt/local/bin/port -N install sbcl pkgconfig allegro5 dylibbundler
+      - name: Install Quicklisp
+        run: |
+          wget -q https://beta.quicklisp.org/quicklisp.lisp -P /tmp
+          HOME=/Users/runner sbcl --non-interactive --load /tmp/quicklisp.lisp --eval '(quicklisp-quickstart:install :dist-version nil :client-version nil)' --eval '(ql-util:without-prompting (ql:add-to-init-file))'  --eval '(ql-dist:install-dist "http://dist.ultralisp.org/" :prompt nil)' --eval '(setf (ql-dist:preference (ql-dist:find-dist "ultralisp")) 0)' --eval '(ql-dist:install-dist "http://dist.luckylambda.technology/releases/lucky-lambda.txt" :prompt nil)'
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build package
-        run: DYLD_FALLBACK_LIBRARY_PATH=/opt/local/lib PKG_CONFIG_PATH=/opt/local/lib/pkgconfig ./package.sh macos
+        run: HOME=/Users/runner DYLD_FALLBACK_LIBRARY_PATH=/opt/local/lib PKG_CONFIG_PATH=/opt/local/lib/pkgconfig ./package.sh macos
       - name: Archive package
         uses: actions/upload-artifact@v3
         with:
@@ -65,7 +69,7 @@ jobs:
           if-no-files-found: error
   release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-windows]
+    needs: [build-linux, build-macos, build-windows]
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
