--- a/package/Info.plist
+++ b/package/Info.plist
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDisplayName</key>
-	<string>Mana Break</string>
-	<key>CFBundleExecutable</key>
-	<string>mana-break</string>
-	<key>CFBundleIconFile</key>
-	<string>icon.png</string>
-	<key>NSHighResolutionCapable</key>
-	<true/>
-</dict>
+  <dict>
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+    <key>CFBundleDisplayName</key>
+    <string>Mana Break</string>
+    <key>CFBundleVersion</key>
+    <string>0.0.2</string>
+    <key>CFBundleExecutable</key>
+    <string>mana-break</string>
+    <key>CFBundleIconFile</key>
+    <string>icon.png</string>
+    <key>NSHumanReadableCopyright</key>
+    <string>Copyright © 2023 Andrew Kravchuk</string>
+    <key>NSHighResolutionCapable</key>
+    <true/>
+  </dict>
 </plist>
