--- a/package/Info.plist
+++ b/package/Info.plist
@@ -10,8 +10,13 @@
     <string>0.0.2</string>
     <key>CFBundleExecutable</key>
     <string>mana-break</string>
-    <key>CFBundleIconFile</key>
-    <string>icon.png</string>
+    <key>CFBundlePrimaryIcon</key>
+    <dict>
+      <key>CFBundleIconFiles</key>
+      <array>
+        <string>icon.png</string>
+      </array>
+    </dict>
     <key>NSHumanReadableCopyright</key>
     <string>Copyright © 2023 Andrew Kravchuk</string>
     <key>NSHighResolutionCapable</key>
